--- a/examples/index.html
+++ b/examples/index.html
@@ -25,5 +25,33 @@
     <p>As well as being saved in their chapter number folder, the Robin's Nest example files are also in the folder <i>robinsnest</i>, so that you can copy the folder to a web server to try for yourself. Please read the final chapter for details on setting up the database etc. Examples that require specific file names to run are also saved in the <i>named_examples</i> folder. All the other information you need to run, understand and modify these examples can be found in the book.</p>
 
     <p>For the latest news on this book, including any errata that have been discovered since its publication (and any updates to these files), please <a href='http://lpmj.net'>visit the website</a>.
+
+    <h2>Chapter Links</h2>
+    <ol>
+        <li><a href="3/">Intro to PHP</a></li>
+        <li><a href="4/">Expressions and Control Flow in PHP</a></li>
+        <li><a href="5/">PHP Functions and Objects</a></li>
+        <li><a href="6/">PHP Arrays</a></li>
+        <li><a href="7/">Practical PHP</a></li>
+        <li><a href="8/">Introduction to MySQL</a></li>
+        <li><a href="9/">Mastering MySQL</a></li>
+        <li><a href="10/">Accessing MySQL Using PHP</a></li>
+        <li><a href="11/">Form Handling</a></li>
+        <li><a href="12/">Cookies, Sessions, and Authentication</a></li>
+        <li><a href="13/">Exploring Javascript</a></li>
+        <li><a href="14/">Expressions and Control Flow in Javascript</a></li>
+        <li><a href="15/">Javascript Functions, Objects, and Arrays</a></li>
+        <li><a href="16/">Javascript and PHP Validation and Error Handling</a></li>
+        <li><a href="17/">Using Ajax</a></li>
+        <li><a href="18/">Introduction to CSS</a></li>
+        <li><a href="19/">Advanced CSS with CSS3</a></li>
+        <li><a href="20/">Accessing CSS from Javascript</a></li>
+        <li><a href="21/">Introduction to JQuery</a></li>
+        <li><a href="22/">Introduction to HTML5</a></li>
+        <li><a href="23/">The HTML5 Canvas</a></li>
+        <li><a href="24/">HTML5 Audio and Video</a></li>
+        <li><a href="25/">Other HTML5 Features</a></li>
+        <li><a href="26/">Bringing It All Together</a></li>
+    </ol>
   </body>
 </html>
