--- a/examples/index.html
+++ b/examples/index.html
@@ -27,7 +27,7 @@
     <p>For the latest news on this book, including any errata that have been discovered since its publication (and any updates to these files), please <a href='http://lpmj.net'>visit the website</a>.
 
     <h2>Chapter Links</h2>
-    <ol>
+    <ol start="3">
         <li><a href="3/">Intro to PHP</a></li>
         <li><a href="4/">Expressions and Control Flow in PHP</a></li>
         <li><a href="5/">PHP Functions and Objects</a></li>
